Change implementation from multimethods to protocols, added benchmarks and performance profiling.