@@ -1,17 +1,24 @@
-(defproject com.sagevisuals/fn-in "4"
+(defproject com.sagevisuals/fn-in "5-SNAPSHOT0"
   :description "A Clojure library for manipulating heterogeneous, arbitrarily-nested data structures."
   :url "https://github.com/blosavio/fn-in"
   :license {:name "MIT License"
             :url "https://opensource.org/license/mit"
             :distribution :repo}
-  :dependencies [[org.clojure/clojure "1.12.0"]]
+  :dependencies [[org.clojure/clojure "1.12.2"]
+                 [com.clojure-goes-fast/clj-async-profiler "1.6.2"]]
   :repl-options {:init-ns fn-in.core}
   :plugins []
   :profiles {:dev {:dependencies [[com.sagevisuals/chlog "1"]
-                                  [com.sagevisuals/fastester "0-SNAPSHOT4"]
+                                  [com.sagevisuals/fastester "0"]
                                   [com.sagevisuals/readmoi "4"]]
                    :plugins [[dev.weavejester/lein-cljfmt "0.12.0"]
-                             [lein-codox "0.10.8"]]}
+                             [lein-codox "0.10.8"]]
+                   :jvm-opts ["-Djdk.attach.allowAttachSelf"
+                              "-XX:+UnlockDiagnosticVMOptions"
+                              "-XX:+DebugNonSafepoints"
+                              "-Dclj-async-profiler.output-dir=./resources/profiler_data/"]}
+             :benchmark {:jvm-opts ["-XX:+TieredCompilation"
+                                    "-XX:TieredStopAtLevel=4"]}
              :repl {}}
   :codox {:metadata {:doc/format :markdown}
           :namespaces [#"^fn-in\.(?!scratch)"]
@@ -20,6 +27,6 @@
           :doc-files []
           :source-uri "https://github.com/blosavio/fn-in/blob/main/{filepath}#L{line}"
           :html {:transforms [[:div.sidebar.primary] [:append [:ul.index-link [:li.depth-1 [:a {:href "https://github.com/blosavio/fn-in"} "Project Home"]]]]]}
-          :project {:name "fn-in" :version "version 4"}}
+          :project {:name "fn-in" :version "version 5"}}
   :scm {:name "git" :url "https://github.com/blosavio/fn-in"})
 
